# ShipGate

./: .codex-instructions.md  .cursorrules  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .islrc.json  .npmrc  .prettierignore  .shipgate.yml  .shipgate.yml.bak  .vibecheckrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_SPECIFICATION.md  CONTRIBUTING.md  Dockerfile  GATE-1.0-PROGRESS.md  GATE_VIOLATIONS_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  ISL-LANGUAGE-SPEC.md  LICENSE  MERGE_RESOLUTION_COMPLETE.md  PACKAGES.md  PHASE-3-ROADMAP.md  PHASE-4-AI-DEFERRED-ROADMAP.md  POLISH_IMPROVEMENTS.md  README.md  RELEASE_1.0_CHECKLIST.md  RELEASE_1.0_PROGRESS.md  RELEASE_1.0_STATUS.md  ROADMAP.md  SECURITY.md  STDLIB.md  THIRD_PARTY_NOTICES.txt  TIER2_RUNTIME_VERIFICATION.md  TIER3_IMPLEMENTATION_SUMMARY.md  WEEK_1_SOC2_PIPELINE.md  (+50 more)
.capability-manifests/: README.md  adapters.json  ai-generator.json  api-versioning.json  autofix.json  build-runner.json  circuit-breaker.json  claims-verifier.json  cli-ux.json  cli.json  codegen-client.json  codegen-core.json  codegen-csharp.json  codegen-db.json  codegen-edge.json  codegen-go.json  codegen-grpc.json  codegen-harness.json  codegen-jvm.json  codegen-k8s.json  codegen-kubernetes.json  codegen-loadtest.json  codegen-migrations.json  codegen-mocks.json  codegen-openapi.json  codegen-pipelines.json  codegen-property-tests.json  codegen-rust.json  codegen-tests.json  (+125 more)
samples/rust-auth-example/: Cargo.toml  README.md
samples/rust-auth-example/specs/: auth.isl
samples/rust-auth-example/src/: main.rs
(+10105 files in other folders)
